--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
+@theme {
+  --font-display: " Noto Sans", sans-serif;
+}
+
 .custom-card-box-shadow {
-  box-shadow: 0px 1px 2px -1px rgb(0 0 0 / 0.1), 0px 1px 3px 0 rgb(0 0 0 / 0.1);
+  box-shadow:
+    0px 1px 2px -1px rgb(0 0 0 / 0.1),
+    0px 1px 3px 0 rgb(0 0 0 / 0.1);
 }
